@@ -143,8 +143,8 @@ my_module (DBM *db, char *mname, enum mtype m_type, char *msg,
 #endif
 
     TRACE (TRACE_FUNCTION, "my_module (%s, %s, %s, %s)",
-           mname ? mname : "(null)", msg ? msg : "(null)",
-           where ? where : "NULL", extra_arg ? extra_arg : "NULL");
+           TRACE_NULL (mname), TRACE_NULL (msg),
+           TRACE_NULL (where), TRACE_NULL (extra_arg));
 
     /* Don't process absolute directories.  Anything else could be a security
      * problem.  Before this check was put in place:
