@@ -176,10 +176,10 @@ strneq (const char *a, const char *b, size_t n)
 /* Convenience macro for printing the commonly used but sometimes empty
  * UPDATE_DIR string.
  */
-#define NULL2DOT(u) (u && *u ? u : ".")
+#define NULL2DOT(u) ((u) && *(u) ? (u) : ".")
 
 /* Convenience macro for equating a NULL pointer and the empty string.  */
-#define NULL2MT(s) (s ? s : "")
+#define NULL2MT(s) ((s) ? (s) : "")
 
 /* Replace pointer D with S, freeing D afterwards.  This is useful when S
  * is an expression containing D.
