@@ -1,3 +1,8 @@
+2008-10-02  Derek R. Price  <derek@ximbiot.com>
+
+	* modules.c (my_module): Clean up TRACE.
+	* subr.h [NULL2DOT, NULL2MT]: Add parens for safety.
+
 2008-09-30  Derek R. Price  <derek@ximbiot.com>
 
 	* checkout.c (preload_update_dir): Eliminate global.  It was used in
